Fix layout issues

--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ main {
     .projects {
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1rem;
+      height: 400px;
 
       article {
         border-top: 4px solid var(--black);
